--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block page_content %}
 <h1>{{ question.question_text }}</h1>
 
 <ul>
@@ -7,3 +10,5 @@
 </ul>
 
 <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+
+{% endblock %}
